--- a/params/variants.toml
+++ b/params/variants.toml
@@ -1083,7 +1083,7 @@ rank = 1
 descriptionAffix = "toothed shape"
 selectorAffix.U = "toothed"
 selectorAffix."U/sansSerif" = "toothed"
-selectorAffix."AU/Right" = "toothed"
+selectorAffix."AU/Right/full" = "toothed"
 selectorAffix."AU/Right/reduced" = "toothed"
 
 [prime.capital-u.variants-buildup.stages.body.tailed]
@@ -1091,7 +1091,7 @@ rank = 2
 descriptionAffix = "tailed shape"
 selectorAffix.U = "tailed"
 selectorAffix."U/sansSerif" = "tailed"
-selectorAffix."AU/Right" = "tailed"
+selectorAffix."AU/Right/full" = "tailed"
 selectorAffix."AU/Right/reduced" = "tailed"
 
 [prime.capital-u.variants-buildup.stages.body.toothless-corner]
@@ -1099,7 +1099,7 @@ rank = 3
 descriptionAffix = "toothless (corner bottom-right) shape"
 selectorAffix.U = "toothlessCorner"
 selectorAffix."U/sansSerif" = "toothlessCorner"
-selectorAffix."AU/Right" = "toothlessCorner"
+selectorAffix."AU/Right/full" = "toothlessCorner"
 selectorAffix."AU/Right/reduced" = "toothlessCorner"
 
 [prime.capital-u.variants-buildup.stages.body.toothless-rounded]
@@ -1107,7 +1107,7 @@ rank = 4
 descriptionAffix = "toothless (rounded) shape"
 selectorAffix.U = "toothlessRounded"
 selectorAffix."U/sansSerif" = "toothlessRounded"
-selectorAffix."AU/Right" = "toothlessRounded"
+selectorAffix."AU/Right/full" = "toothlessRounded"
 selectorAffix."AU/Right/reduced" = "toothlessRounded"
 
 [prime.capital-u.variants-buildup.stages.serifs.serifless]
@@ -1116,7 +1116,7 @@ descriptionAffix = "serifs"
 descriptionJoiner = "without"
 selectorAffix.U = "serifless"
 selectorAffix."U/sansSerif" = "serifless"
-selectorAffix."AU/Right" = "serifless"
+selectorAffix."AU/Right/full" = "serifless"
 selectorAffix."AU/Right/reduced" = "serifless"
 
 [prime.capital-u.variants-buildup.stages.serifs.bottom-right-serifed]
@@ -1125,7 +1125,7 @@ disableIf = [{ body = "NOT toothed" }]
 descriptionAffix = "serif at bottom-right"
 selectorAffix.U = "bottomRightSerifed"
 selectorAffix."U/sansSerif" = "serifless"
-selectorAffix."AU/Right" = "bottomRightSerifed"
+selectorAffix."AU/Right/full" = "bottomRightSerifed"
 selectorAffix."AU/Right/reduced" = "bottomRightSerifed"
 
 [prime.capital-u.variants-buildup.stages.serifs.motion-serifed]
@@ -1134,7 +1134,7 @@ disableIf = [{ body = "toothless-corner" }, { body = "toothless-rounded" }]
 descriptionAffix = "motion serifs at top-left and bottom-right"
 selectorAffix.U = "unilateralMotionSerifed"
 selectorAffix."U/sansSerif" = "serifless"
-selectorAffix."AU/Right" = { if = [{ body = "toothed" }], then = "bottomRightSerifed", else = "serifless" }
+selectorAffix."AU/Right/full" = { if = [{ body = "toothed" }], then = "bottomRightSerifed", else = "serifless" }
 selectorAffix."AU/Right/reduced" = { if = [{ body = "toothed" }], then = "bottomRightSerifed", else = "serifless" }
 
 [prime.capital-u.variants-buildup.stages.serifs.unilateral-motion-serifed]
@@ -1143,7 +1143,7 @@ disableIf = [{ body = "toothed" }, { body = "tailed" }]
 descriptionAffix = "motion serifs at left side"
 selectorAffix.U = "unilateralMotionSerifed"
 selectorAffix."U/sansSerif" = "serifless"
-selectorAffix."AU/Right" = "serifless"
+selectorAffix."AU/Right/full" = "serifless"
 selectorAffix."AU/Right/reduced" = "serifless"
 
 [prime.capital-u.variants-buildup.stages.serifs.bilateral-motion-serifed]
@@ -1152,7 +1152,7 @@ disableIf = [{ body = "toothed" }, { body = "tailed" }]
 descriptionAffix = "motion serifs at both sides"
 selectorAffix.U = "bilateralMotionSerifed"
 selectorAffix."U/sansSerif" = "serifless"
-selectorAffix."AU/Right" = "bilateralMotionSerifed"
+selectorAffix."AU/Right/full" = "bilateralMotionSerifed"
 selectorAffix."AU/Right/reduced" = "bilateralMotionSerifed"
 
 [prime.capital-u.variants-buildup.stages.serifs.serifed]
@@ -1160,7 +1160,7 @@ rank = 6
 descriptionAffix = "serifs"
 selectorAffix.U = "serifed"
 selectorAffix."U/sansSerif" = "serifless"
-selectorAffix."AU/Right" = "serifed"
+selectorAffix."AU/Right/full" = "serifed"
 selectorAffix."AU/Right/reduced" = { if = [{ body = "toothed" }], then = "bottomRightSerifed", else = { if = [{ body = "tailed" }], then = "serifless", else = "bilateralMotionSerifed" } }
 
 
@@ -3744,21 +3744,21 @@ selectorAffix.uHookLeft = "toothed"
 selectorAffix.turnh = "toothed"
 selectorAffix.turnhHookLeft = "toothed"
 selectorAffix.turnhHookLeftRTail = "toothed"
-selectorAffix.turnm = "toothed"
+selectorAffix."turnm/full" = "toothed"
 selectorAffix."turnm/reduced" = "toothed"
-selectorAffix.turnmLeg = "toothed"
+selectorAffix."turnmLeg/full" = "toothed"
 selectorAffix."turnmLeg/reduced" = "toothed"
 selectorAffix."cyrl/i.italic" = "toothed"
 selectorAffix."cyrl/i.italic/descBase" = "toothed"
-selectorAffix."cyrl/sha.italic" = "toothed"
+selectorAffix."cyrl/sha/full.italic" = "toothed"
 selectorAffix."cyrl/sha/reduced.italic" = "toothed"
-selectorAffix."cyrl/shcha.italic" = "toothed"
+selectorAffix."cyrl/shcha/full.italic" = "toothed"
 selectorAffix."cyrl/shcha/reduced.italic" = "toothed"
 selectorAffix."cyrl/dzhe.italic" = "toothed"
 selectorAffix."cyrl/tse.italic" = "toothed"
 selectorAffix."cyrl/tseRev.italic" = "toothed"
 selectorAffix."ue/u" = "toothed"
-selectorAffix."au/u" = "toothed"
+selectorAffix."au/u/full" = "toothed"
 selectorAffix."au/u/reduced" = "toothed"
 
 [prime.u.variants-buildup.stages.body.tailed]
@@ -3771,21 +3771,21 @@ selectorAffix.uHookLeft = "tailed"
 selectorAffix.turnh = "toothed"
 selectorAffix.turnhHookLeft = "toothed"
 selectorAffix.turnhHookLeftRTail = "toothed"
-selectorAffix.turnm = "tailed"
+selectorAffix."turnm/full" = "tailed"
 selectorAffix."turnm/reduced" = "tailed"
-selectorAffix.turnmLeg = "toothed"
+selectorAffix."turnmLeg/full" = "toothed"
 selectorAffix."turnmLeg/reduced" = "toothed"
 selectorAffix."cyrl/i.italic" = "tailed"
 selectorAffix."cyrl/i.italic/descBase" = "toothed"
-selectorAffix."cyrl/sha.italic" = "tailed"
+selectorAffix."cyrl/sha/full.italic" = "tailed"
 selectorAffix."cyrl/sha/reduced.italic" = "tailed"
-selectorAffix."cyrl/shcha.italic" = "toothed"
+selectorAffix."cyrl/shcha/full.italic" = "toothed"
 selectorAffix."cyrl/shcha/reduced.italic" = "toothed"
 selectorAffix."cyrl/dzhe.italic" = "tailed"
 selectorAffix."cyrl/tse.italic" = "toothed"
 selectorAffix."cyrl/tseRev.italic" = "tailed"
 selectorAffix."ue/u" = "toothed"
-selectorAffix."au/u" = "tailed"
+selectorAffix."au/u/full" = "tailed"
 selectorAffix."au/u/reduced" = "tailed"
 
 [prime.u.variants-buildup.stages.body.toothless-corner]
@@ -3798,21 +3798,21 @@ selectorAffix.uHookLeft = "toothlessCorner"
 selectorAffix.turnh = "toothlessCorner"
 selectorAffix.turnhHookLeft = "toothlessCorner"
 selectorAffix.turnhHookLeftRTail = "toothlessCorner"
-selectorAffix.turnm = "toothlessCorner"
+selectorAffix."turnm/full" = "toothlessCorner"
 selectorAffix."turnm/reduced" = "toothlessCorner"
-selectorAffix.turnmLeg = "toothlessCorner"
+selectorAffix."turnmLeg/full" = "toothlessCorner"
 selectorAffix."turnmLeg/reduced" = "toothlessCorner"
 selectorAffix."cyrl/i.italic" = "toothed"
 selectorAffix."cyrl/i.italic/descBase" = "toothed"
-selectorAffix."cyrl/sha.italic" = "toothed"
+selectorAffix."cyrl/sha/full.italic" = "toothed"
 selectorAffix."cyrl/sha/reduced.italic" = "toothed"
-selectorAffix."cyrl/shcha.italic" = "toothed"
+selectorAffix."cyrl/shcha/full.italic" = "toothed"
 selectorAffix."cyrl/shcha/reduced.italic" = "toothed"
 selectorAffix."cyrl/dzhe.italic" = "toothed"
 selectorAffix."cyrl/tse.italic" = "toothed"
 selectorAffix."cyrl/tseRev.italic" = "toothed"
 selectorAffix."ue/u" = "toothed"
-selectorAffix."au/u" = "toothlessCorner"
+selectorAffix."au/u/full" = "toothlessCorner"
 selectorAffix."au/u/reduced" = "toothlessCorner"
 
 [prime.u.variants-buildup.stages.body.toothless-rounded]
@@ -3825,21 +3825,21 @@ selectorAffix.uHookLeft = "toothlessRounded"
 selectorAffix.turnh = "toothed"
 selectorAffix.turnhHookLeft = "toothed"
 selectorAffix.turnhHookLeftRTail = "toothed"
-selectorAffix.turnm = "toothlessRounded"
+selectorAffix."turnm/full" = "toothlessRounded"
 selectorAffix."turnm/reduced" = "toothlessRounded"
-selectorAffix.turnmLeg = "toothed"
+selectorAffix."turnmLeg/full" = "toothed"
 selectorAffix."turnmLeg/reduced" = "toothed"
 selectorAffix."cyrl/i.italic" = "toothed"
 selectorAffix."cyrl/i.italic/descBase" = "toothed"
-selectorAffix."cyrl/sha.italic" = "toothed"
+selectorAffix."cyrl/sha/full.italic" = "toothed"
 selectorAffix."cyrl/sha/reduced.italic" = "toothed"
-selectorAffix."cyrl/shcha.italic" = "toothed"
+selectorAffix."cyrl/shcha/full.italic" = "toothed"
 selectorAffix."cyrl/shcha/reduced.italic" = "toothed"
 selectorAffix."cyrl/dzhe.italic" = "toothed"
 selectorAffix."cyrl/tse.italic" = "toothed"
 selectorAffix."cyrl/tseRev.italic" = "toothed"
 selectorAffix."ue/u" = "toothed"
-selectorAffix."au/u" = "toothlessRounded"
+selectorAffix."au/u/full" = "toothlessRounded"
 selectorAffix."au/u/reduced" = "toothlessRounded"
 
 [prime.u.variants-buildup.stages.serifs.serifless]
@@ -3853,21 +3853,21 @@ selectorAffix.uHookLeft = "serifless"
 selectorAffix.turnh = "serifless"
 selectorAffix.turnhHookLeft = "serifless"
 selectorAffix.turnhHookLeftRTail = "serifless"
-selectorAffix.turnm = "serifless"
+selectorAffix."turnm/full" = "serifless"
 selectorAffix."turnm/reduced" = "serifless"
-selectorAffix.turnmLeg = "serifless"
+selectorAffix."turnmLeg/full" = "serifless"
 selectorAffix."turnmLeg/reduced" = "serifless"
 selectorAffix."cyrl/i.italic" = "serifless"
 selectorAffix."cyrl/i.italic/descBase" = "serifless"
-selectorAffix."cyrl/sha.italic" = "serifless"
+selectorAffix."cyrl/sha/full.italic" = "serifless"
 selectorAffix."cyrl/sha/reduced.italic" = "serifless"
-selectorAffix."cyrl/shcha.italic" = "serifless"
+selectorAffix."cyrl/shcha/full.italic" = "serifless"
 selectorAffix."cyrl/shcha/reduced.italic" = "serifless"
 selectorAffix."cyrl/dzhe.italic" = "serifless"
 selectorAffix."cyrl/tse.italic" = "serifless"
 selectorAffix."cyrl/tseRev.italic" = "serifless"
 selectorAffix."ue/u" = "serifless"
-selectorAffix."au/u" = "serifless"
+selectorAffix."au/u/full" = "serifless"
 selectorAffix."au/u/reduced" = "serifless"
 
 [prime.u.variants-buildup.stages.serifs.bottom-right-serifed]
@@ -3881,21 +3881,21 @@ selectorAffix.uHookLeft = "bottomRightSerifed"
 selectorAffix.turnh = "serifless"
 selectorAffix.turnhHookLeft = "serifless"
 selectorAffix.turnhHookLeftRTail = "serifless"
-selectorAffix.turnm = "bottomRightSerifed"
+selectorAffix."turnm/full" = "bottomRightSerifed"
 selectorAffix."turnm/reduced" = "bottomRightSerifed"
-selectorAffix.turnmLeg = "serifless"
+selectorAffix."turnmLeg/full" = "serifless"
 selectorAffix."turnmLeg/reduced" = "serifless"
 selectorAffix."cyrl/i.italic" = "bottomRightSerifed"
 selectorAffix."cyrl/i.italic/descBase" = "serifless"
-selectorAffix."cyrl/sha.italic" = "bottomRightSerifed"
+selectorAffix."cyrl/sha/full.italic" = "bottomRightSerifed"
 selectorAffix."cyrl/sha/reduced.italic" = "bottomRightSerifed"
-selectorAffix."cyrl/shcha.italic" = "serifless"
+selectorAffix."cyrl/shcha/full.italic" = "serifless"
 selectorAffix."cyrl/shcha/reduced.italic" = "serifless"
 selectorAffix."cyrl/dzhe.italic" = "bottomRightSerifed"
 selectorAffix."cyrl/tse.italic" = "serifless"
 selectorAffix."cyrl/tseRev.italic" = "bottomRightSerifed"
 selectorAffix."ue/u" = "serifless"
-selectorAffix."au/u" = "bottomRightSerifed"
+selectorAffix."au/u/full" = "bottomRightSerifed"
 selectorAffix."au/u/reduced" = "bottomRightSerifed"
 
 [prime.u.variants-buildup.stages.serifs.motion-serifed]
@@ -3908,21 +3908,21 @@ selectorAffix.uHookLeft = {if = [{body = "toothed"}], then = "bottomRightSerifed
 selectorAffix.turnh = "motionSerifed"
 selectorAffix.turnhHookLeft = "bottomRightSerifed"
 selectorAffix.turnhHookLeftRTail = "serifless"
-selectorAffix.turnm = "motionSerifed"
+selectorAffix."turnm/full" = "motionSerifed"
 selectorAffix."turnm/reduced" = "motionSerifed"
-selectorAffix.turnmLeg = "motionSerifed"
+selectorAffix."turnmLeg/full" = "motionSerifed"
 selectorAffix."turnmLeg/reduced" = "motionSerifed"
 selectorAffix."cyrl/i.italic" = "motionSerifed"
 selectorAffix."cyrl/i.italic/descBase" = "motionSerifed"
-selectorAffix."cyrl/sha.italic" = "motionSerifed"
+selectorAffix."cyrl/sha/full.italic" = "motionSerifed"
 selectorAffix."cyrl/sha/reduced.italic" = "motionSerifed"
-selectorAffix."cyrl/shcha.italic" = "motionSerifed"
+selectorAffix."cyrl/shcha/full.italic" = "motionSerifed"
 selectorAffix."cyrl/shcha/reduced.italic" = "motionSerifed"
 selectorAffix."cyrl/dzhe.italic" = "motionSerifed"
 selectorAffix."cyrl/tse.italic" = "motionSerifed"
 selectorAffix."cyrl/tseRev.italic" = "motionSerifed"
 selectorAffix."ue/u" = "serifed"
-selectorAffix."au/u" = {if = [{body = "toothed"}], then = "bottomRightSerifed", else = "serifless"}
+selectorAffix."au/u/full" = {if = [{body = "toothed"}], then = "bottomRightSerifed", else = "serifless"}
 selectorAffix."au/u/reduced" = {if = [{body = "toothed"}], then = "bottomRightSerifed", else = "serifless"}
 
 [prime.u.variants-buildup.stages.serifs.serifed]
@@ -3935,21 +3935,21 @@ selectorAffix.uHookLeft = "serifed"
 selectorAffix.turnh = "serifed"
 selectorAffix.turnhHookLeft = "serifed"
 selectorAffix.turnhHookLeftRTail = "serifed"
-selectorAffix.turnm = "serifed"
+selectorAffix."turnm/full" = "serifed"
 selectorAffix."turnm/reduced" = "motionSerifed"
-selectorAffix.turnmLeg = "serifed"
+selectorAffix."turnmLeg/full" = "serifed"
 selectorAffix."turnmLeg/reduced" = "motionSerifed"
 selectorAffix."cyrl/i.italic" = "serifed"
 selectorAffix."cyrl/i.italic/descBase" = "serifed"
-selectorAffix."cyrl/sha.italic" = "serifed"
+selectorAffix."cyrl/sha/full.italic" = "serifed"
 selectorAffix."cyrl/sha/reduced.italic" = "motionSerifed"
-selectorAffix."cyrl/shcha.italic" = "serifed"
+selectorAffix."cyrl/shcha/full.italic" = "serifed"
 selectorAffix."cyrl/shcha/reduced.italic" = "motionSerifed"
 selectorAffix."cyrl/dzhe.italic" = "serifed"
 selectorAffix."cyrl/tse.italic" = "serifed"
 selectorAffix."cyrl/tseRev.italic" = "serifed"
 selectorAffix."ue/u" = "serifed"
-selectorAffix."au/u" = "serifed"
+selectorAffix."au/u/full" = "serifed"
 selectorAffix."au/u/reduced" = {if = [{body = "toothed"}], then = "bottomRightSerifed", else = "serifless"}
 
 
