Cleanup of #2331 (cont.)

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -1083,32 +1083,32 @@ rank = 1
 descriptionAffix = "toothed shape"
 selectorAffix.U = "toothed"
 selectorAffix."U/sansSerif" = "toothed"
-selectorAffix."AU/Right/full" = "toothed"
-selectorAffix."AU/Right/reduced" = "toothed"
+selectorAffix."AU/U/full" = "toothed"
+selectorAffix."AU/U/reduced" = "toothed"
 
 [prime.capital-u.variants-buildup.stages.body.tailed]
 rank = 2
 descriptionAffix = "tailed shape"
 selectorAffix.U = "tailed"
 selectorAffix."U/sansSerif" = "tailed"
-selectorAffix."AU/Right/full" = "tailed"
-selectorAffix."AU/Right/reduced" = "tailed"
+selectorAffix."AU/U/full" = "tailed"
+selectorAffix."AU/U/reduced" = "tailed"
 
 [prime.capital-u.variants-buildup.stages.body.toothless-corner]
 rank = 3
 descriptionAffix = "toothless (corner bottom-right) shape"
 selectorAffix.U = "toothlessCorner"
 selectorAffix."U/sansSerif" = "toothlessCorner"
-selectorAffix."AU/Right/full" = "toothlessCorner"
-selectorAffix."AU/Right/reduced" = "toothlessCorner"
+selectorAffix."AU/U/full" = "toothlessCorner"
+selectorAffix."AU/U/reduced" = "toothlessCorner"
 
 [prime.capital-u.variants-buildup.stages.body.toothless-rounded]
 rank = 4
 descriptionAffix = "toothless (rounded) shape"
 selectorAffix.U = "toothlessRounded"
 selectorAffix."U/sansSerif" = "toothlessRounded"
-selectorAffix."AU/Right/full" = "toothlessRounded"
-selectorAffix."AU/Right/reduced" = "toothlessRounded"
+selectorAffix."AU/U/full" = "toothlessRounded"
+selectorAffix."AU/U/reduced" = "toothlessRounded"
 
 [prime.capital-u.variants-buildup.stages.serifs.serifless]
 rank = 1
@@ -1116,8 +1116,8 @@ descriptionAffix = "serifs"
 descriptionJoiner = "without"
 selectorAffix.U = "serifless"
 selectorAffix."U/sansSerif" = "serifless"
-selectorAffix."AU/Right/full" = "serifless"
-selectorAffix."AU/Right/reduced" = "serifless"
+selectorAffix."AU/U/full" = "serifless"
+selectorAffix."AU/U/reduced" = "serifless"
 
 [prime.capital-u.variants-buildup.stages.serifs.bottom-right-serifed]
 rank = 2
@@ -1125,8 +1125,8 @@ disableIf = [{ body = "NOT toothed" }]
 descriptionAffix = "serif at bottom-right"
 selectorAffix.U = "bottomRightSerifed"
 selectorAffix."U/sansSerif" = "serifless"
-selectorAffix."AU/Right/full" = "bottomRightSerifed"
-selectorAffix."AU/Right/reduced" = "bottomRightSerifed"
+selectorAffix."AU/U/full" = "bottomRightSerifed"
+selectorAffix."AU/U/reduced" = "bottomRightSerifed"
 
 [prime.capital-u.variants-buildup.stages.serifs.motion-serifed]
 rank = 3
@@ -1134,8 +1134,8 @@ disableIf = [{ body = "toothless-corner" }, { body = "toothless-rounded" }]
 descriptionAffix = "motion serifs at top-left and bottom-right"
 selectorAffix.U = "unilateralMotionSerifed"
 selectorAffix."U/sansSerif" = "serifless"
-selectorAffix."AU/Right/full" = { if = [{ body = "toothed" }], then = "bottomRightSerifed", else = "serifless" }
-selectorAffix."AU/Right/reduced" = { if = [{ body = "toothed" }], then = "bottomRightSerifed", else = "serifless" }
+selectorAffix."AU/U/full" = { if = [{ body = "toothed" }], then = "bottomRightSerifed", else = "serifless" }
+selectorAffix."AU/U/reduced" = { if = [{ body = "toothed" }], then = "bottomRightSerifed", else = "serifless" }
 
 [prime.capital-u.variants-buildup.stages.serifs.unilateral-motion-serifed]
 rank = 4
@@ -1143,8 +1143,8 @@ disableIf = [{ body = "toothed" }, { body = "tailed" }]
 descriptionAffix = "motion serifs at left side"
 selectorAffix.U = "unilateralMotionSerifed"
 selectorAffix."U/sansSerif" = "serifless"
-selectorAffix."AU/Right/full" = "serifless"
-selectorAffix."AU/Right/reduced" = "serifless"
+selectorAffix."AU/U/full" = "serifless"
+selectorAffix."AU/U/reduced" = "serifless"
 
 [prime.capital-u.variants-buildup.stages.serifs.bilateral-motion-serifed]
 rank = 5
@@ -1152,16 +1152,16 @@ disableIf = [{ body = "toothed" }, { body = "tailed" }]
 descriptionAffix = "motion serifs at both sides"
 selectorAffix.U = "bilateralMotionSerifed"
 selectorAffix."U/sansSerif" = "serifless"
-selectorAffix."AU/Right/full" = "bilateralMotionSerifed"
-selectorAffix."AU/Right/reduced" = "bilateralMotionSerifed"
+selectorAffix."AU/U/full" = "bilateralMotionSerifed"
+selectorAffix."AU/U/reduced" = "bilateralMotionSerifed"
 
 [prime.capital-u.variants-buildup.stages.serifs.serifed]
 rank = 6
 descriptionAffix = "serifs"
 selectorAffix.U = "serifed"
 selectorAffix."U/sansSerif" = "serifless"
-selectorAffix."AU/Right/full" = "serifed"
-selectorAffix."AU/Right/reduced" = { if = [{ body = "toothed" }], then = "bottomRightSerifed", else = { if = [{ body = "tailed" }], then = "serifless", else = "bilateralMotionSerifed" } }
+selectorAffix."AU/U/full" = "serifed"
+selectorAffix."AU/U/reduced" = { if = [{ body = "toothed" }], then = "bottomRightSerifed", else = { if = [{ body = "tailed" }], then = "serifless", else = "bilateralMotionSerifed" } }
 
 
 
@@ -3750,10 +3750,10 @@ selectorAffix."turnmLeg/full" = "toothed"
 selectorAffix."turnmLeg/reduced" = "toothed"
 selectorAffix."cyrl/i.italic" = "toothed"
 selectorAffix."cyrl/i.italic/descBase" = "toothed"
-selectorAffix."cyrl/sha/full.italic" = "toothed"
-selectorAffix."cyrl/sha/reduced.italic" = "toothed"
-selectorAffix."cyrl/shcha/full.italic" = "toothed"
-selectorAffix."cyrl/shcha/reduced.italic" = "toothed"
+selectorAffix."cyrl/sha.italic/full" = "toothed"
+selectorAffix."cyrl/sha.italic/reduced" = "toothed"
+selectorAffix."cyrl/shcha.italic/full" = "toothed"
+selectorAffix."cyrl/shcha.italic/reduced" = "toothed"
 selectorAffix."cyrl/dzhe.italic" = "toothed"
 selectorAffix."cyrl/tse.italic" = "toothed"
 selectorAffix."cyrl/tseRev.italic" = "toothed"
@@ -3777,10 +3777,10 @@ selectorAffix."turnmLeg/full" = "toothed"
 selectorAffix."turnmLeg/reduced" = "toothed"
 selectorAffix."cyrl/i.italic" = "tailed"
 selectorAffix."cyrl/i.italic/descBase" = "toothed"
-selectorAffix."cyrl/sha/full.italic" = "tailed"
-selectorAffix."cyrl/sha/reduced.italic" = "tailed"
-selectorAffix."cyrl/shcha/full.italic" = "toothed"
-selectorAffix."cyrl/shcha/reduced.italic" = "toothed"
+selectorAffix."cyrl/sha.italic/full" = "tailed"
+selectorAffix."cyrl/sha.italic/reduced" = "tailed"
+selectorAffix."cyrl/shcha.italic/full" = "toothed"
+selectorAffix."cyrl/shcha.italic/reduced" = "toothed"
 selectorAffix."cyrl/dzhe.italic" = "tailed"
 selectorAffix."cyrl/tse.italic" = "toothed"
 selectorAffix."cyrl/tseRev.italic" = "tailed"
@@ -3804,10 +3804,10 @@ selectorAffix."turnmLeg/full" = "toothlessCorner"
 selectorAffix."turnmLeg/reduced" = "toothlessCorner"
 selectorAffix."cyrl/i.italic" = "toothed"
 selectorAffix."cyrl/i.italic/descBase" = "toothed"
-selectorAffix."cyrl/sha/full.italic" = "toothed"
-selectorAffix."cyrl/sha/reduced.italic" = "toothed"
-selectorAffix."cyrl/shcha/full.italic" = "toothed"
-selectorAffix."cyrl/shcha/reduced.italic" = "toothed"
+selectorAffix."cyrl/sha.italic/full" = "toothed"
+selectorAffix."cyrl/sha.italic/reduced" = "toothed"
+selectorAffix."cyrl/shcha.italic/full" = "toothed"
+selectorAffix."cyrl/shcha.italic/reduced" = "toothed"
 selectorAffix."cyrl/dzhe.italic" = "toothed"
 selectorAffix."cyrl/tse.italic" = "toothed"
 selectorAffix."cyrl/tseRev.italic" = "toothed"
@@ -3831,10 +3831,10 @@ selectorAffix."turnmLeg/full" = "toothed"
 selectorAffix."turnmLeg/reduced" = "toothed"
 selectorAffix."cyrl/i.italic" = "toothed"
 selectorAffix."cyrl/i.italic/descBase" = "toothed"
-selectorAffix."cyrl/sha/full.italic" = "toothed"
-selectorAffix."cyrl/sha/reduced.italic" = "toothed"
-selectorAffix."cyrl/shcha/full.italic" = "toothed"
-selectorAffix."cyrl/shcha/reduced.italic" = "toothed"
+selectorAffix."cyrl/sha.italic/full" = "toothed"
+selectorAffix."cyrl/sha.italic/reduced" = "toothed"
+selectorAffix."cyrl/shcha.italic/full" = "toothed"
+selectorAffix."cyrl/shcha.italic/reduced" = "toothed"
 selectorAffix."cyrl/dzhe.italic" = "toothed"
 selectorAffix."cyrl/tse.italic" = "toothed"
 selectorAffix."cyrl/tseRev.italic" = "toothed"
@@ -3859,10 +3859,10 @@ selectorAffix."turnmLeg/full" = "serifless"
 selectorAffix."turnmLeg/reduced" = "serifless"
 selectorAffix."cyrl/i.italic" = "serifless"
 selectorAffix."cyrl/i.italic/descBase" = "serifless"
-selectorAffix."cyrl/sha/full.italic" = "serifless"
-selectorAffix."cyrl/sha/reduced.italic" = "serifless"
-selectorAffix."cyrl/shcha/full.italic" = "serifless"
-selectorAffix."cyrl/shcha/reduced.italic" = "serifless"
+selectorAffix."cyrl/sha.italic/full" = "serifless"
+selectorAffix."cyrl/sha.italic/reduced" = "serifless"
+selectorAffix."cyrl/shcha.italic/full" = "serifless"
+selectorAffix."cyrl/shcha.italic/reduced" = "serifless"
 selectorAffix."cyrl/dzhe.italic" = "serifless"
 selectorAffix."cyrl/tse.italic" = "serifless"
 selectorAffix."cyrl/tseRev.italic" = "serifless"
@@ -3887,10 +3887,10 @@ selectorAffix."turnmLeg/full" = "serifless"
 selectorAffix."turnmLeg/reduced" = "serifless"
 selectorAffix."cyrl/i.italic" = "bottomRightSerifed"
 selectorAffix."cyrl/i.italic/descBase" = "serifless"
-selectorAffix."cyrl/sha/full.italic" = "bottomRightSerifed"
-selectorAffix."cyrl/sha/reduced.italic" = "bottomRightSerifed"
-selectorAffix."cyrl/shcha/full.italic" = "serifless"
-selectorAffix."cyrl/shcha/reduced.italic" = "serifless"
+selectorAffix."cyrl/sha.italic/full" = "bottomRightSerifed"
+selectorAffix."cyrl/sha.italic/reduced" = "bottomRightSerifed"
+selectorAffix."cyrl/shcha.italic/full" = "serifless"
+selectorAffix."cyrl/shcha.italic/reduced" = "serifless"
 selectorAffix."cyrl/dzhe.italic" = "bottomRightSerifed"
 selectorAffix."cyrl/tse.italic" = "serifless"
 selectorAffix."cyrl/tseRev.italic" = "bottomRightSerifed"
@@ -3914,10 +3914,10 @@ selectorAffix."turnmLeg/full" = "motionSerifed"
 selectorAffix."turnmLeg/reduced" = "motionSerifed"
 selectorAffix."cyrl/i.italic" = "motionSerifed"
 selectorAffix."cyrl/i.italic/descBase" = "motionSerifed"
-selectorAffix."cyrl/sha/full.italic" = "motionSerifed"
-selectorAffix."cyrl/sha/reduced.italic" = "motionSerifed"
-selectorAffix."cyrl/shcha/full.italic" = "motionSerifed"
-selectorAffix."cyrl/shcha/reduced.italic" = "motionSerifed"
+selectorAffix."cyrl/sha.italic/full" = "motionSerifed"
+selectorAffix."cyrl/sha.italic/reduced" = "motionSerifed"
+selectorAffix."cyrl/shcha.italic/full" = "motionSerifed"
+selectorAffix."cyrl/shcha.italic/reduced" = "motionSerifed"
 selectorAffix."cyrl/dzhe.italic" = "motionSerifed"
 selectorAffix."cyrl/tse.italic" = "motionSerifed"
 selectorAffix."cyrl/tseRev.italic" = "motionSerifed"
@@ -3941,10 +3941,10 @@ selectorAffix."turnmLeg/full" = "serifed"
 selectorAffix."turnmLeg/reduced" = "motionSerifed"
 selectorAffix."cyrl/i.italic" = "serifed"
 selectorAffix."cyrl/i.italic/descBase" = "serifed"
-selectorAffix."cyrl/sha/full.italic" = "serifed"
-selectorAffix."cyrl/sha/reduced.italic" = "motionSerifed"
-selectorAffix."cyrl/shcha/full.italic" = "serifed"
-selectorAffix."cyrl/shcha/reduced.italic" = "motionSerifed"
+selectorAffix."cyrl/sha.italic/full" = "serifed"
+selectorAffix."cyrl/sha.italic/reduced" = "motionSerifed"
+selectorAffix."cyrl/shcha.italic/full" = "serifed"
+selectorAffix."cyrl/shcha.italic/reduced" = "motionSerifed"
 selectorAffix."cyrl/dzhe.italic" = "serifed"
 selectorAffix."cyrl/tse.italic" = "serifed"
 selectorAffix."cyrl/tseRev.italic" = "serifed"
