Add 4 chars from Cyrl Ext.B and 2 from Latn Ext.E

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -400,7 +400,7 @@ selector.rightHalfH = "serifless"
 selector."grek/Heta" = "serifless"
 selector."grek/heta" = "serifless"
 selector.Hwair = "serifless"
-selector.HHookLeft = "serifless"
+selector.HHookTop = "serifless"
 selector."cyrl/Nje/leftHalf" = "serifless"
 selector."cyrl/Nje/leftHalf/reduced" = "serifless"
 
@@ -415,7 +415,7 @@ selector.rightHalfH = "serifless"
 selector."grek/Heta" = "topLeftSerifed"
 selector."grek/heta" = "topLeftSerifed"
 selector.Hwair = "topLeftSerifed"
-selector.HHookLeft = "serifless"
+selector.HHookTop = "serifless"
 selector."cyrl/Nje/leftHalf" = "topLeftSerifed"
 selector."cyrl/Nje/leftHalf/reduced" = "topLeftSerifed"
 
@@ -430,7 +430,7 @@ selector.rightHalfH = "topLeftBottomRightSerifed"
 selector."grek/Heta" = "topLeftSerifed"
 selector."grek/heta" = "topLeftSerifed"
 selector.Hwair = "topLeftSerifed"
-selector.HHookLeft = "topLeftBottomRightSerifed"
+selector.HHookTop = "topLeftBottomRightSerifed"
 selector."cyrl/Nje/leftHalf" = "topLeftSerifed"
 selector."cyrl/Nje/leftHalf/reduced" = "topLeftSerifed"
 
@@ -445,7 +445,7 @@ selector.rightHalfH = "serifed"
 selector."grek/Heta" = "serifed"
 selector."grek/heta" = "topLeftSerifed"
 selector.Hwair = "serifedExceptBottomRight"
-selector.HHookLeft = "serifed"
+selector.HHookTop = "serifed"
 selector."cyrl/Nje/leftHalf" = "serifed"
 selector."cyrl/Nje/leftHalf/reduced" = "serifedExceptBottomRight"
 
@@ -3740,6 +3740,7 @@ descriptionAffix = "toothed shape"
 selectorAffix.u = "toothed"
 selectorAffix."u/sansSerif" = "toothed"
 selectorAffix."u/uRTailBase" = "urtBase"
+selectorAffix.uShortLeg = "toothed"
 selectorAffix.uHookLeft = "toothed"
 selectorAffix.turnh = "toothed"
 selectorAffix.turnhHookLeft = "toothed"
@@ -3767,6 +3768,7 @@ descriptionAffix = "tailed shape"
 selectorAffix.u = "tailed"
 selectorAffix."u/sansSerif" = "tailed"
 selectorAffix."u/uRTailBase" = "urtBase"
+selectorAffix.uShortLeg = "tailed"
 selectorAffix.uHookLeft = "tailed"
 selectorAffix.turnh = "toothed"
 selectorAffix.turnhHookLeft = "toothed"
@@ -3794,6 +3796,7 @@ descriptionAffix = "toothless (corner bottom-right) shape"
 selectorAffix.u = "toothlessCorner"
 selectorAffix."u/sansSerif" = "toothlessCorner"
 selectorAffix."u/uRTailBase" = "urtBase"
+selectorAffix.uShortLeg = "toothlessCorner"
 selectorAffix.uHookLeft = "toothlessCorner"
 selectorAffix.turnh = "toothlessCorner"
 selectorAffix.turnhHookLeft = "toothlessCorner"
@@ -3821,6 +3824,7 @@ descriptionAffix = "toothless (rounded) shape"
 selectorAffix.u = "toothlessRounded"
 selectorAffix."u/sansSerif" = "toothlessRounded"
 selectorAffix."u/uRTailBase" = "urtBase"
+selectorAffix.uShortLeg = "toothlessRounded"
 selectorAffix.uHookLeft = "toothlessRounded"
 selectorAffix.turnh = "toothed"
 selectorAffix.turnhHookLeft = "toothed"
@@ -3849,6 +3853,7 @@ descriptionJoiner = "without"
 selectorAffix.u = "serifless"
 selectorAffix."u/sansSerif" = "serifless"
 selectorAffix."u/uRTailBase" = "serifless"
+selectorAffix.uShortLeg = "serifless"
 selectorAffix.uHookLeft = "serifless"
 selectorAffix.turnh = "serifless"
 selectorAffix.turnhHookLeft = "serifless"
@@ -3877,6 +3882,7 @@ descriptionAffix = "serif at bottom-right"
 selectorAffix.u = "bottomRightSerifed"
 selectorAffix."u/sansSerif" = "serifless"
 selectorAffix."u/uRTailBase" = "serifless"
+selectorAffix.uShortLeg = "bottomRightSerifed"
 selectorAffix.uHookLeft = "bottomRightSerifed"
 selectorAffix.turnh = "serifless"
 selectorAffix.turnhHookLeft = "serifless"
@@ -3904,6 +3910,7 @@ descriptionAffix = "motion serifs at top-left and bottom-right"
 selectorAffix.u = "motionSerifed"
 selectorAffix."u/sansSerif" = "serifless"
 selectorAffix."u/uRTailBase" = "motionSerifed"
+selectorAffix.uShortLeg = "motionSerifed"
 selectorAffix.uHookLeft = {if = [{body = "toothed"}], then = "bottomRightSerifed", else = "serifless"}
 selectorAffix.turnh = "motionSerifed"
 selectorAffix.turnhHookLeft = "bottomRightSerifed"
@@ -3931,6 +3938,7 @@ descriptionAffix = "serifs"
 selectorAffix.u = "serifed"
 selectorAffix."u/sansSerif" = "serifless"
 selectorAffix."u/uRTailBase" = "serifed"
+selectorAffix.uShortLeg = "motionSerifed"
 selectorAffix.uHookLeft = "serifed"
 selectorAffix.turnh = "serifed"
 selectorAffix.turnhHookLeft = "serifed"
