Add variant selector for Cyrillic E.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -6093,7 +6093,7 @@ selector."cyrl/Lje"  = "cursive"
 
 
 [prime.cyrl-yeri]
-sampler = "ь"
+sampler = "ь ъ"
 samplerExplain = "Cyrillic Lower Yeri and related letters"
 tagKind = "letter"
 
@@ -6198,6 +6198,82 @@ description = "Cyrillic Lower Yery (`ы`) with cursive shape and tail"
 selector."cyrl/yery" = "cursiveTailed"
 selector."cyrl/yeryBack" = "cursiveTailed"
 selector."cyrl/yuRev" = "tailed"
+
+
+
+[prime.cyrl-capital-e]
+sampler = "Э"
+samplerExplain = "Cyrillic Capital E (`Э`)"
+nonBreakingTagForNewVariantSelector = "VXAA" # REMOVE IN NEXT MAJOR VERSION CHANGE
+tagKind = "letter"
+
+[prime.cyrl-capital-e.variants.serifless]
+rank = 1
+description = "Serifless Cyrillic Capital E (`Э`)"
+selector."cyrl/E" = "serifless"
+selector."cyrl/ETopSerifOnly" = "serifless"
+
+[prime.cyrl-capital-e.variants.unilateral-serifed]
+rank = 2
+description = "Cyrillic Capital E (`Э`) with serif at top"
+selector."cyrl/E" = "unilateralSerifed"
+selector."cyrl/ETopSerifOnly" = "unilateralSerifed"
+
+[prime.cyrl-capital-e.variants.bilateral-serifed]
+rank = 3
+description = "Cyrillic Capital E (`Э`) with serifs at both top and bottom"
+selector."cyrl/E" = "bilateralSerifed"
+selector."cyrl/ETopSerifOnly" = "unilateralSerifed"
+
+[prime.cyrl-capital-e.variants.unilateral-inward-serifed]
+rank = 4
+description = "Cyrillic Capital E (`Э`) with inward serif at top"
+selector."cyrl/E" = "unilateralInwardSerifed"
+selector."cyrl/ETopSerifOnly" = "unilateralInwardSerifed"
+
+[prime.cyrl-capital-e.variants.bilateral-inward-serifed]
+rank = 5
+description = "Cyrillic Capital E (`Э`) with inward serif at both top and bottom"
+selector."cyrl/E" = "bilateralInwardSerifed"
+selector."cyrl/ETopSerifOnly" = "unilateralInwardSerifed"
+
+
+
+[prime.cyrl-e]
+sampler = "э"
+samplerExplain = "Cyrillic Lower E (`э`)"
+nonBreakingTagForNewVariantSelector = "VXAB" # REMOVE IN NEXT MAJOR VERSION CHANGE
+tagKind = "letter"
+
+[prime.cyrl-e.variants.serifless]
+rank = 1
+description = "Serifless Cyrillic Lower E (`э`)"
+selector."cyrl/e" = "serifless"
+selector."cyrl/eTopSerifOnly" = "serifless"
+
+[prime.cyrl-e.variants.unilateral-serifed]
+rank = 2
+description = "Cyrillic Lower E (`э`) with serif at top"
+selector."cyrl/e" = "unilateralSerifed"
+selector."cyrl/eTopSerifOnly" = "unilateralSerifed"
+
+[prime.cyrl-e.variants.bilateral-serifed]
+rank = 3
+description = "Cyrillic Lower E (`э`) with serifs at both top and bottom"
+selector."cyrl/e" = "bilateralSerifed"
+selector."cyrl/eTopSerifOnly" = "unilateralSerifed"
+
+[prime.cyrl-e.variants.unilateral-inward-serifed]
+rank = 4
+description = "Cyrillic Lower E (`э`) with inward serif at top"
+selector."cyrl/e" = "unilateralInwardSerifed"
+selector."cyrl/eTopSerifOnly" = "unilateralInwardSerifed"
+
+[prime.cyrl-e.variants.bilateral-inward-serifed]
+rank = 5
+description = "Cyrillic Lower E (`э`) with inward serif at both top and bottom"
+selector."cyrl/e" = "bilateralInwardSerifed"
+selector."cyrl/eTopSerifOnly" = "unilateralInwardSerifed"
 
 
 
@@ -7849,6 +7925,8 @@ cyrl-capital-yeri = "corner"
 cyrl-yeri = "corner"
 cyrl-capital-yery = "corner"
 cyrl-yery = "corner"
+cyrl-capital-e = "serifless"
+cyrl-e = "serifless"
 cyrl-capital-ya = "straight-serifless"
 cyrl-ya = "straight-serifless"
 # Digits
@@ -7985,6 +8063,8 @@ cyrl-er = "eared-serifed"
 cyrl-capital-u = "straight-turn-serifed"
 cyrl-u = "straight-turn-serifed"
 cyrl-ef = "serifed"
+cyrl-capital-e = "unilateral-serifed"
+cyrl-e = "unilateral-serifed"
 cyrl-capital-ya = "straight-serifed"
 cyrl-ya = "straight-serifed"
 one = "base"
@@ -8025,6 +8105,7 @@ cyrl-u = "cursive-motion-serifed"
 cyrl-ef = "cursive"
 cyrl-yeri = "cursive"
 cyrl-yery = "cursive"
+cyrl-e = "unilateral-inward-serifed"
 micro-sign = "tailed-motion-serifed"
 
 
@@ -8115,6 +8196,7 @@ cyrl-ka = "straight-serifed"
 cyrl-capital-u = "straight-turn-serifed"
 cyrl-u = "straight-turn-serifed"
 cyrl-ef = "split-serifed"
+cyrl-e = "unilateral-serifed"
 two = "straight-neck-serifed"
 four = "closed-serifed"
 micro-sign = "toothed-serifed"
@@ -8168,6 +8250,7 @@ cyrl-u = "straight-turn-serifless"
 cyrl-ef = "split-serifless"
 cyrl-yeri = "corner"
 cyrl-yery = "corner"
+cyrl-capital-e = "unilateral-serifed"
 one = "base"
 two = "straight-neck-serifed"
 four = "closed-serifed"
@@ -8213,6 +8296,7 @@ cyrl-em = "hanging-serifed"
 cyrl-capital-u = "straight-turn-serifed"
 cyrl-u = "straight-turn-serifed"
 cyrl-ef = "split-serifed"
+cyrl-e = "unilateral-serifed"
 micro-sign = "toothed-serifed"
 
 
@@ -8408,6 +8492,7 @@ cyrl-em = "hanging-serifed"
 cyrl-capital-u = "straight-turn-serifed"
 cyrl-u = "straight-turn-serifed"
 cyrl-ef = "serifed"
+cyrl-e = "unilateral-serifed"
 two = "straight-neck-serifed"
 four = "closed-serifed"
 micro-sign = "tailed-serifed"
@@ -8498,6 +8583,7 @@ cyrl-em = "slanted-sides-hanging-serifed"
 cyrl-capital-u = "straight-turn-serifed"
 cyrl-u = "straight-turn-serifed"
 cyrl-ef = "split-serifed"
+cyrl-e = "unilateral-serifed"
 two = "straight-neck-serifed"
 micro-sign = "toothed-serifed"
 
@@ -8583,6 +8669,7 @@ cyrl-ka = "symmetric-connected-serifed"
 cyrl-capital-u = "straight-turn-serifed"
 cyrl-u = "straight-turn-serifed"
 cyrl-ef = "serifed"
+cyrl-e = "unilateral-serifed"
 four = "closed-serifed"
 five = "oblique-arched-serifed"
 seven = "bend-serifed"
@@ -8670,6 +8757,7 @@ cyrl-ka = "symmetric-connected-serifed"
 cyrl-capital-u = "straight-turn-serifed"
 cyrl-u = "straight-turn-serifed"
 cyrl-ef = "serifed"
+cyrl-e = "unilateral-serifed"
 four = "closed-serifed"
 seven = "curly-serifed"
 micro-sign = "toothed-serifed"
@@ -9197,6 +9285,7 @@ cyrl-ka = "symmetric-connected-serifed"
 cyrl-capital-u = "straight-turn-serifed"
 cyrl-u = "straight-turn-serifed"
 cyrl-ef = "split-serifed"
+cyrl-e = "unilateral-serifed"
 four = "closed-serifed"
 seven = "bend-serifed"
 micro-sign = "toothed-serifed"
@@ -9466,6 +9555,8 @@ cyrl-u = "straight-turn-serifless"
 cyrl-ef = "split-top-serifed"
 cyrl-yeri = "corner"
 cyrl-yery = "corner"
+cyrl-capital-e = "bilateral-inward-serifed"
+cyrl-e = "unilateral-inward-serifed"
 cyrl-ya = "straight-motion-serifed"
 one = "base"
 two = "straight-neck-serifless"
@@ -9557,6 +9648,8 @@ cyrl-ze = "serifless"
 cyrl-capital-ka = "symmetric-connected-bottom-right-serifed"
 cyrl-capital-u = "straight-turn-serifless"
 cyrl-u = "straight-turn-serifless"
+cyrl-capital-e = "unilateral-inward-serifed"
+cyrl-e = "serifless"
 cyrl-capital-ya = "straight-motion-serifed"
 one = "base"
 five = "oblique-arched-serifless"
@@ -9603,6 +9696,7 @@ eszet = "longs-s-lig-descending-serifless"
 cyrl-ze = "unilateral-inward-serifed"
 cyrl-ka = "symmetric-connected-bottom-right-serifed"
 cyrl-u = "cursive-serifless"
+cyrl-e = "unilateral-inward-serifed"
 cyrl-ya = "straight-motion-serifed"
 
 [composite.ss17.slab-override.design]
@@ -9626,6 +9720,7 @@ cyrl-ze = "unilateral-inward-serifed"
 cyrl-capital-ka = "symmetric-connected-serifed"
 cyrl-capital-u = "straight-turn-serifed"
 cyrl-u = "straight-turn-serifed"
+cyrl-e = "unilateral-inward-serifed"
 cyrl-capital-ya = "straight-serifed"
 cyrl-ya = "straight-serifed"
 five = "oblique-arched-serifed"
