* Add bottom-serifed variants to Cyrillic E.
* Make Euro Sign respond to Cyrillic Ye variants.
* Make Pound Sterling Sign respond to `L` variants.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -180,7 +180,7 @@ selector."C/descBase" = "bilateralSerifed"
 selector."C/sansSerif" = "serifless"
 selector.CHookTop = "bilateralSerifed"
 selector.CTopSerifOnly = "unilateralSerifed"
-selector.CBottomSerifOnly = "bilateralSerifed"
+selector.CBottomSerifOnly = "bottomSerifed"
 
 [prime.capital-c.variants.unilateral-inward-serifed]
 rank = 4
@@ -200,7 +200,7 @@ selector."C/descBase" = "bilateralInwardSerifed"
 selector."C/sansSerif" = "serifless"
 selector.CHookTop = "bilateralInwardSerifed"
 selector.CTopSerifOnly = "unilateralInwardSerifed"
-selector.CBottomSerifOnly = "bilateralInwardSerifed"
+selector.CBottomSerifOnly = "bottomInwardSerifed"
 
 
 
@@ -289,18 +289,21 @@ rank = 1
 description = "F without serifs"
 selector.F = "serifless"
 selector."F/sansSerif" = "serifless"
+selector."currency/frenchFrancSign" = "serifless"
 
 [prime.capital-f.variants.top-left-serifed]
 rank = 2
 description = "F with serif only at top left"
 selector.F = "topLeftSerifed"
 selector."F/sansSerif" = "serifless"
+selector."currency/frenchFrancSign" = "topLeftSerifed"
 
 [prime.capital-f.variants.serifed]
 rank = 3
 description = "F with serifs"
 selector.F = "serifed"
 selector."F/sansSerif" = "serifless"
+selector."currency/frenchFrancSign" = "serifed"
 
 
 
@@ -644,18 +647,21 @@ rank = 1
 description = "Serifless `L`"
 selector.L = "serifless"
 selector."L/sansSerif" = "serifless"
+selector."currency/sterlingSign" = "serifless"
 
 [prime.capital-l.variants.motion-serifed]
 rank = 2
 description = "Standard `L` with motion serif at bottom right"
 selector.L = "motionSerifed"
 selector."L/sansSerif" = "serifless"
+selector."currency/sterlingSign" = "motionSerifed"
 
 [prime.capital-l.variants.serifed]
 rank = 3
 description = "`L` with serifs"
 selector.L = "serifed"
 selector."L/sansSerif" = "serifless"
+selector."currency/sterlingSign" = "motionSerifed"
 
 
 
@@ -1792,7 +1798,6 @@ description = "Serifless `c`"
 selector.c = "serifless"
 selector."c/sansSerif" = "serifless"
 selector."c/descBase" = "serifless"
-selector."c/turnDescBase" = "unilateralSerifed"
 selector.cCurlyTail = "serifless"
 selector.cHookTop = "unilateralSerifed"
 selector.cTopSerifOnly = "serifless"
@@ -1804,7 +1809,6 @@ description = "`c` with serif at top"
 selector.c = "unilateralSerifed"
 selector."c/sansSerif" = "serifless"
 selector."c/descBase" = "bilateralSerifed"
-selector."c/turnDescBase" = "unilateralSerifed"
 selector.cCurlyTail = "unilateralSerifed"
 selector.cHookTop = "unilateralSerifed"
 selector.cTopSerifOnly = "unilateralSerifed"
@@ -1816,11 +1820,10 @@ description = "`c` with serifs at both top and bottom"
 selector.c = "bilateralSerifed"
 selector."c/sansSerif" = "serifless"
 selector."c/descBase" = "bilateralSerifed"
-selector."c/turnDescBase" = "bilateralSerifed"
 selector.cCurlyTail = "unilateralSerifed"
 selector.cHookTop = "bilateralSerifed"
 selector.cTopSerifOnly = "unilateralSerifed"
-selector.cBottomSerifOnly = "bilateralSerifed"
+selector.cBottomSerifOnly = "bottomSerifed"
 
 [prime.c.variants.unilateral-inward-serifed]
 rank = 4
@@ -1828,7 +1831,6 @@ description = "`c` with inward serif at top"
 selector.c = "unilateralInwardSerifed"
 selector."c/sansSerif" = "serifless"
 selector."c/descBase" = "hybridSerifed1"
-selector."c/turnDescBase" = "unilateralInwardSerifed"
 selector.cCurlyTail = "unilateralInwardSerifed"
 selector.cHookTop = "unilateralInwardSerifed"
 selector.cTopSerifOnly = "unilateralInwardSerifed"
@@ -1840,11 +1842,10 @@ description = "`c` with inward serif at both top and bottom"
 selector.c = "bilateralInwardSerifed"
 selector."c/sansSerif" = "serifless"
 selector."c/descBase" = "bilateralInwardSerifed"
-selector."c/turnDescBase" = "bilateralInwardSerifed"
 selector.cCurlyTail = "unilateralInwardSerifed"
 selector.cHookTop = "bilateralInwardSerifed"
 selector.cTopSerifOnly = "unilateralInwardSerifed"
-selector.cBottomSerifOnly = "bilateralInwardSerifed"
+selector.cBottomSerifOnly = "bottomInwardSerifed"
 
 
 
@@ -6212,30 +6213,56 @@ rank = 1
 description = "Serifless Cyrillic Capital E (`Э`)"
 selector."cyrl/E" = "serifless"
 selector."cyrl/ETopSerifOnly" = "serifless"
+selector."cyrl/Ye" = "serifless"
+selector."currency/euroSign" = "serifless"
 
 [prime.cyrl-capital-e.variants.unilateral-serifed]
 rank = 2
 description = "Cyrillic Capital E (`Э`) with serif at top"
 selector."cyrl/E" = "unilateralSerifed"
 selector."cyrl/ETopSerifOnly" = "unilateralSerifed"
+selector."cyrl/Ye" = "unilateralSerifed"
+selector."currency/euroSign" = "unilateralSerifed"
+
+[prime.cyrl-capital-e.variants.unilateral-bottom-serifed]
+rank = 3
+description = "Cyrillic Capital E (`Э`) with serif at bottom"
+selector."cyrl/E" = "bottomSerifed"
+selector."cyrl/ETopSerifOnly" = "serifless"
+selector."cyrl/Ye" = "unilateralSerifed"
+selector."currency/euroSign" = "unilateralSerifed"
 
 [prime.cyrl-capital-e.variants.bilateral-serifed]
-rank = 3
+rank = 4
 description = "Cyrillic Capital E (`Э`) with serifs at both top and bottom"
 selector."cyrl/E" = "bilateralSerifed"
 selector."cyrl/ETopSerifOnly" = "unilateralSerifed"
+selector."cyrl/Ye" = "bilateralSerifed"
+selector."currency/euroSign" = "bilateralSerifed"
 
 [prime.cyrl-capital-e.variants.unilateral-inward-serifed]
-rank = 4
+rank = 5
 description = "Cyrillic Capital E (`Э`) with inward serif at top"
 selector."cyrl/E" = "unilateralInwardSerifed"
 selector."cyrl/ETopSerifOnly" = "unilateralInwardSerifed"
+selector."cyrl/Ye" = "unilateralInwardSerifed"
+selector."currency/euroSign" = "unilateralInwardSerifed"
+
+[prime.cyrl-capital-e.variants.unilateral-bottom-inward-serifed]
+rank = 6
+description = "Cyrillic Capital E (`Э`) with inward serif at bottom"
+selector."cyrl/E" = "bottomInwardSerifed"
+selector."cyrl/ETopSerifOnly" = "serifless"
+selector."cyrl/Ye" = "unilateralInwardSerifed"
+selector."currency/euroSign" = "unilateralInwardSerifed"
 
 [prime.cyrl-capital-e.variants.bilateral-inward-serifed]
-rank = 5
+rank = 7
 description = "Cyrillic Capital E (`Э`) with inward serif at both top and bottom"
 selector."cyrl/E" = "bilateralInwardSerifed"
 selector."cyrl/ETopSerifOnly" = "unilateralInwardSerifed"
+selector."cyrl/Ye" = "bilateralInwardSerifed"
+selector."currency/euroSign" = "bilateralInwardSerifed"
 
 
 
@@ -6250,30 +6277,49 @@ rank = 1
 description = "Serifless Cyrillic Lower E (`э`)"
 selector."cyrl/e" = "serifless"
 selector."cyrl/eTopSerifOnly" = "serifless"
+selector."cyrl/ye" = "serifless"
 
 [prime.cyrl-e.variants.unilateral-serifed]
 rank = 2
 description = "Cyrillic Lower E (`э`) with serif at top"
 selector."cyrl/e" = "unilateralSerifed"
 selector."cyrl/eTopSerifOnly" = "unilateralSerifed"
+selector."cyrl/ye" = "unilateralSerifed"
+
+[prime.cyrl-e.variants.unilateral-bottom-serifed]
+rank = 3
+description = "Cyrillic Lower E (`э`) with serif at bottom"
+selector."cyrl/e" = "bottomSerifed"
+selector."cyrl/eTopSerifOnly" = "serifless"
+selector."cyrl/ye" = "unilateralSerifed"
 
 [prime.cyrl-e.variants.bilateral-serifed]
-rank = 3
+rank = 4
 description = "Cyrillic Lower E (`э`) with serifs at both top and bottom"
 selector."cyrl/e" = "bilateralSerifed"
 selector."cyrl/eTopSerifOnly" = "unilateralSerifed"
+selector."cyrl/ye" = "bilateralSerifed"
 
 [prime.cyrl-e.variants.unilateral-inward-serifed]
-rank = 4
+rank = 5
 description = "Cyrillic Lower E (`э`) with inward serif at top"
 selector."cyrl/e" = "unilateralInwardSerifed"
 selector."cyrl/eTopSerifOnly" = "unilateralInwardSerifed"
+selector."cyrl/ye" = "unilateralInwardSerifed"
+
+[prime.cyrl-e.variants.unilateral-bottom-inward-serifed]
+rank = 6
+description = "Cyrillic Lower E (`э`) with inward serif at bottom"
+selector."cyrl/e" = "bottomInwardSerifed"
+selector."cyrl/eTopSerifOnly" = "serifless"
+selector."cyrl/ye" = "unilateralInwardSerifed"
 
 [prime.cyrl-e.variants.bilateral-inward-serifed]
-rank = 5
+rank = 7
 description = "Cyrillic Lower E (`э`) with inward serif at both top and bottom"
 selector."cyrl/e" = "bilateralInwardSerifed"
 selector."cyrl/eTopSerifOnly" = "unilateralInwardSerifed"
+selector."cyrl/ye" = "bilateralInwardSerifed"
 
 
 
