* Add bottom-serifed variants to Cyrillic Ze.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -5353,40 +5353,58 @@ rank = 1
 description = "Serifless Cyrillic Capital Ze (`З`)"
 selector."latn/Epsilon" = "serifless"
 selector."cyrl/Ze" = "serifless"
-selector."cyrl/Ksi" = "serifless"
-selector."Yogh" = "serifless"
+selector."cyrl/ZeTopSerifOnly" = "serifless"
+selector."cyrl/ZeBottomSerifOnly" = "serifless"
 
 [prime.cyrl-capital-ze.variants.unilateral-serifed]
 rank = 2
 description = "Cyrillic Capital Ze (`З`) with serif at top"
 selector."latn/Epsilon" = "unilateralSerifed"
 selector."cyrl/Ze" = "unilateralSerifed"
-selector."cyrl/Ksi" = "unilateralSerifed"
-selector."Yogh" = "unilateralSerifed"
+selector."cyrl/ZeTopSerifOnly" = "unilateralSerifed"
+selector."cyrl/ZeBottomSerifOnly" = "serifless"
+
+[prime.cyrl-capital-ze.variants.unilateral-bottom-serifed]
+rank = 3
+nonBreakingVariantAdditionPriority = 100
+description = "Cyrillic Capital Ze (`З`) with serif at bottom"
+selector."latn/Epsilon" = "unilateralSerifed"
+selector."cyrl/Ze" = "bottomSerifed"
+selector."cyrl/ZeTopSerifOnly" = "serifless"
+selector."cyrl/ZeBottomSerifOnly" = "bottomSerifed"
 
 [prime.cyrl-capital-ze.variants.bilateral-serifed]
-rank = 3
+rank = 4
 description = "Cyrillic Capital Ze (`З`) with serif at both top and bottom"
 selector."latn/Epsilon" = "bilateralSerifed"
 selector."cyrl/Ze" = "bilateralSerifed"
-selector."cyrl/Ksi" = "unilateralSerifed"
-selector."Yogh" = "unilateralSerifed"
+selector."cyrl/ZeTopSerifOnly" = "unilateralSerifed"
+selector."cyrl/ZeBottomSerifOnly" = "bottomSerifed"
 
 [prime.cyrl-capital-ze.variants.unilateral-inward-serifed]
-rank = 4
+rank = 5
 description = "Cyrillic Capital Ze (`З`) with inward serif at top"
 selector."latn/Epsilon" = "unilateralInwardSerifed"
 selector."cyrl/Ze" = "unilateralInwardSerifed"
-selector."cyrl/Ksi" = "unilateralInwardSerifed"
-selector."Yogh" = "unilateralInwardSerifed"
+selector."cyrl/ZeTopSerifOnly" = "unilateralInwardSerifed"
+selector."cyrl/ZeBottomSerifOnly" = "serifless"
+
+[prime.cyrl-capital-ze.variants.unilateral-bottom-inward-serifed]
+rank = 6
+nonBreakingVariantAdditionPriority = 200
+description = "Cyrillic Capital Ze (`З`) with inward serif at bottom"
+selector."latn/Epsilon" = "unilateralInwardSerifed"
+selector."cyrl/Ze" = "bottomInwardSerifed"
+selector."cyrl/ZeTopSerifOnly" = "serifless"
+selector."cyrl/ZeBottomSerifOnly" = "bottomInwardSerifed"
 
 [prime.cyrl-capital-ze.variants.bilateral-inward-serifed]
-rank = 5
+rank = 7
 description = "Cyrillic Capital Ze (`З`) with inward serif at both top and bottom"
 selector."latn/Epsilon" = "bilateralInwardSerifed"
 selector."cyrl/Ze" = "bilateralInwardSerifed"
-selector."cyrl/Ksi" = "unilateralInwardSerifed"
-selector."Yogh" = "unilateralInwardSerifed"
+selector."cyrl/ZeTopSerifOnly" = "unilateralInwardSerifed"
+selector."cyrl/ZeBottomSerifOnly" = "bottomInwardSerifed"
 
 
 
@@ -5399,11 +5417,11 @@ tagKind = "letter"
 rank = 1
 description = "Serifless Cyrillic Lower Ze (`з`)"
 selector."latn/epsilon" = "serifless"
-selector."latn/epsilon/descBase" = "seriflessDesc"
+selector."latn/epsilon/descBase" = "bottomSerifed"
 selector."cyrl/ze" = "serifless"
-selector."cyrl/ze/topAttached" = "serifless"
-selector."cyrl/ksi" = "serifless"
-selector."yogh" = "serifless"
+selector."cyrl/ze/descBase" = "bottomSerifed"
+selector."cyrl/zeTopSerifOnly" = "serifless"
+selector."cyrl/zeBottomSerifOnly" = "serifless"
 
 [prime.cyrl-ze.variants.unilateral-serifed]
 rank = 2
@@ -5411,39 +5429,61 @@ description = "Cyrillic Lower Ze (`з`) with serif at top"
 selector."latn/epsilon" = "unilateralSerifed"
 selector."latn/epsilon/descBase" = "bilateralSerifed"
 selector."cyrl/ze" = "unilateralSerifed"
-selector."cyrl/ze/topAttached" = "serifless"
-selector."cyrl/ksi" = "unilateralSerifed"
-selector."yogh" = "unilateralSerifed"
+selector."cyrl/ze/descBase" = "bilateralSerifed"
+selector."cyrl/zeTopSerifOnly" = "unilateralSerifed"
+selector."cyrl/zeBottomSerifOnly" = "serifless"
+
+[prime.cyrl-ze.variants.unilateral-bottom-serifed]
+rank = 3
+nonBreakingVariantAdditionPriority = 100
+description = "Cyrillic Lower Ze (`з`) with serif at bottom"
+selector."latn/epsilon" = "unilateralSerifed"
+selector."latn/epsilon/descBase" = "bilateralSerifed"
+selector."cyrl/ze" = "bottomSerifed"
+selector."cyrl/ze/descBase" = "bottomSerifed"
+selector."cyrl/zeTopSerifOnly" = "serifless"
+selector."cyrl/zeBottomSerifOnly" = "bottomSerifed"
 
 [prime.cyrl-ze.variants.bilateral-serifed]
-rank = 3
+rank = 4
 description = "Cyrillic Lower Ze (`з`) with serif at both top and bottom"
 selector."latn/epsilon" = "bilateralSerifed"
 selector."latn/epsilon/descBase" = "bilateralSerifed"
 selector."cyrl/ze" = "bilateralSerifed"
-selector."cyrl/ze/topAttached" = "bilateralSerifed"
-selector."cyrl/ksi" = "unilateralSerifed"
-selector."yogh" = "unilateralSerifed"
+selector."cyrl/ze/descBase" = "bilateralSerifed"
+selector."cyrl/zeTopSerifOnly" = "unilateralSerifed"
+selector."cyrl/zeBottomSerifOnly" = "bottomSerifed"
 
 [prime.cyrl-ze.variants.unilateral-inward-serifed]
-rank = 4
+rank = 5
 description = "Cyrillic Lower Ze (`з`) with inward serif at top"
 selector."latn/epsilon" = "unilateralInwardSerifed"
-selector."latn/epsilon/descBase" = "unilateralInwardSerifedDesc"
+selector."latn/epsilon/descBase" = "hybridSerifed1"
 selector."cyrl/ze" = "unilateralInwardSerifed"
-selector."cyrl/ze/topAttached" = "serifless"
-selector."cyrl/ksi" = "unilateralInwardSerifed"
-selector."yogh" = "unilateralInwardSerifed"
+selector."cyrl/ze/descBase" = "hybridSerifed1"
+selector."cyrl/zeTopSerifOnly" = "unilateralInwardSerifed"
+selector."cyrl/zeBottomSerifOnly" = "serifless"
+
+[prime.cyrl-ze.variants.unilateral-bottom-inward-serifed]
+rank = 6
+nonBreakingVariantAdditionPriority = 200
+description = "Cyrillic Lower Ze (`з`) with inward serif at bottom"
+selector."latn/epsilon" = "unilateralInwardSerifed"
+selector."latn/epsilon/descBase" = "hybridSerifed1"
+selector."cyrl/ze" = "bottomInwardSerifed"
+selector."cyrl/ze/descBase" = "bottomSerifed"
+selector."cyrl/zeTopSerifOnly" = "serifless"
+selector."cyrl/zeBottomSerifOnly" = "bottomInwardSerifed"
 
 [prime.cyrl-ze.variants.bilateral-inward-serifed]
-rank = 5
+rank = 7
 description = "Cyrillic Lower Ze (`з`) with inward serif at both top and bottom"
 selector."latn/epsilon" = "bilateralInwardSerifed"
-selector."latn/epsilon/descBase" = "unilateralInwardSerifedDesc"
+selector."latn/epsilon/descBase" = "hybridSerifed1"
 selector."cyrl/ze" = "bilateralInwardSerifed"
-selector."cyrl/ze/topAttached" = "bilateralInwardSerifed"
-selector."cyrl/ksi" = "unilateralInwardSerifed"
-selector."yogh" = "unilateralInwardSerifed"
+selector."cyrl/ze/descBase" = "hybridSerifed1"
+selector."cyrl/zeTopSerifOnly" = "unilateralInwardSerifed"
+selector."cyrl/zeBottomSerifOnly" = "bottomInwardSerifed"
 
 
 
